--- a/loaded/loaded/index.html
+++ b/loaded/loaded/index.html
@@ -55,6 +55,13 @@
       </div>
     </div>
 
+        <!-- Timeline -->
+        <div class="card text-white bg-secondary my-5 py-4 text-center">
+          <div class="card-body">
+            <p class="text-white m-0">timeline here</p>
+          </div>
+        </div>
+
     <!-- Content Row -->
     <div class="row">
       <div class="col-md-6 mb-5">
